--- a/NutriFinder.Server/NutriFinder.Server.csproj
+++ b/NutriFinder.Server/NutriFinder.Server.csproj
@@ -18,4 +18,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NutriFinder.Client\NutriFinder.Client.csproj" />
+      <ProjectReference Include="..\NutriFinder.Database\NutriFinder.Database.csproj" />
+      <ProjectReference Include="..\NutriFinder.ExternAPI\NutriFinder.ExternAPI.csproj" />
+    </ItemGroup>
+
 </Project>
