--- a/CD-pipeline.yml
+++ b/CD-pipeline.yml
@@ -24,12 +24,8 @@ steps:
   - task: CmdLine@2
     displayName: 'Build Docker image'
     inputs:
-      script: |                                                        # YAML block scalar (|) for multi-line shell commands
-        docker build \                                                 # Build
-          -t mtbonde/nutrifinder:$(Build.SourceBranchName) \           # tag image with Branch name
-          -t mtbonde/nutrifinder:latest \                              # tag image with "Latest"
-          -f NutriFinderClient/Dockerfile \                            # dockerfile located in the client project folder
-          .                                                            # . means build from solution root, so path in dockerfile are valid
+      script: docker build -t mtbonde/nutrifinder:$(Build.SourceBranchName) -t mtbonde/nutrifinder:latest -f NutriFinderClient/Dockerfile .
+         # . means build from solution root, so path in dockerfile are valid
 
 
   # Step 2: Authenticate and push both tags to Docker Hub
