--- a/CD-pipeline.yml
+++ b/CD-pipeline.yml
@@ -1,5 +1,5 @@
 # CD pipeline for NutriFinder
-# This pipeline builds and pushes the NutriFinderServer Docker image to Docker Hub
+# This pipeline builds and pushes the NutriFinder Docker image to Docker Hub
 # Triggered automatically when the CI pipeline (BuildAndTest) completes successfully on 'main'
 
 trigger: none
@@ -24,17 +24,23 @@ steps:
   - task: CmdLine@2
     displayName: 'Build Docker image'
     inputs:
-      script: docker build -t mtbonde/nutrifinder:$(Build.SourceBranchName) -t mtbonde/nutrifinder:latest -f NutriFinderClient/Dockerfile .
+      script: docker build -t mtbonde/nutrifinder-client:$(Build.SourceBranchName) -t mtbonde/nutrifinder-client:latest -f NutriFinderClient/Dockerfile .
          # . means build from solution root, so path in dockerfile are valid
 
-
-  # Step 2: Authenticate and push both tags to Docker Hub
+  # Step 2: Login agent and push both tags to Docker Hub
+  - task: CmdLine@2
+    displayName: 'Docker login'
+    inputs:
+      script: docker login -u %DOCKER_USERNAME% -p %DOCKER_PASSWORD%
+    env:
+      DOCKER_USERNAME: $(DOCKER_USERNAME)
+      DOCKER_PASSWORD: $(DOCKER_PASSWORD)
   - task: CmdLine@2
     displayName: 'Push image to Docker Hub'
     inputs:
-      script: docker push --all-tags mtbonde/nutrifinder
+      script: docker push --all-tags mtbonde/nutrifinder-client
 
-  # Step 3: Optional cleanup to remove unused images from the agent
+  # Step 3: Cleanup to remove unused images from the agent
   - task: CmdLine@2
     displayName: 'Cleanup old Docker images'
     inputs:
