--- a/Server-CD-pipeline.yml
+++ b/Server-CD-pipeline.yml
@@ -1,4 +1,4 @@
-# CD pipeline for NutriFinder
+# CD pipeline for NutriFinder server
 # This pipeline builds and pushes the NutriFinder Docker image to Docker Hub
 # Triggered automatically when the CI pipeline (BuildAndTest) completes successfully on 'main'
 
@@ -14,6 +14,9 @@ resources:
         branches:
           include:
             - main
+        paths:
+          include:
+            - NutriFinder.Server/**
 
 # Use self hosted default agent pool 
 pool:
@@ -24,7 +27,7 @@ steps:
   - task: CmdLine@2
     displayName: 'Build Docker image'
     inputs:
-      script: docker build -t mtbonde/nutrifinder-client:$(Build.BuildNumber) -t mtbonde/nutrifinder-client:latest -f NutriFinderClient/Dockerfile .
+      script: docker build -t mtbonde/nutrifinder-server:$(Build.BuildNumber) -t mtbonde/nutrifinder-server:latest -f NutriFinder.Server/Dockerfile .
          # . means build from solution root, so path in dockerfile are valid
 
   # Step 2: Login agent and push both tags to Docker Hub
@@ -38,7 +41,7 @@ steps:
   - task: CmdLine@2
     displayName: 'Push image to Docker Hub'
     inputs:
-      script: docker push --all-tags mtbonde/nutrifinder-client
+      script: docker push --all-tags mtbonde/nutrifinder-server
 
   # Step 3: Cleanup to remove unused images from the agent
   - task: CmdLine@2
