--- a/Client-CI-pipeline.yml
+++ b/Client-CI-pipeline.yml
@@ -14,7 +14,10 @@ trigger:
   paths:
     include:
       - NutriFinderClient/**
-
+      - Client-CD-pipeline.yml
+      - Client-CI-pipeline.yml
+      - Server-CD-pipeline.yml
+      - Server-CI-pipeline.yml
 
 pr:
   branches:
