--- a/NutriFinder.Server/NutriFinder.Server.csproj
+++ b/NutriFinder.Server/NutriFinder.Server.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Nutrifinder.Shared\Nutrifinder.Shared.csproj" />
       <ProjectReference Include="..\NutriFinderClient\NutriFinderClient.csproj" />
       <ProjectReference Include="..\NutriFinder.Database\NutriFinder.Database.csproj" />
     </ItemGroup>
