--- a/NutriFinder.Tests/NutriFinder.Tests.csproj
+++ b/NutriFinder.Tests/NutriFinder.Tests.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.5" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest" Version="3.8.3" />
+    <PackageReference Include="Testcontainers" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
