added: -DTU external api excel reader -frida excelfile
changed:
-Fakenutritionrepo, removed to.lower(), testing failed because return was not same as tolowered input/output
-nutrtionclient,
--added correct adress to contructor
--changed regex to allow space and ,
-nutritionclient.tests changed to use customWAF
-customWAF changed to remove real repo and api, and add in fakes
-nutrition controller changes db lookup to trycatch incase db was down, which made some test fail, so added a return ok outside trycatch for when db is up
-requerstvalidator to allow " ,"
-serverprogram
--added real api and repo, and correct http
--removes https redirect

---- turned on compose and changes server dockerfile to correct folders and ports ----

--- a/NutriFinder.Server/Dockerfile
+++ b/NutriFinder.Server/Dockerfile
@@ -8,9 +8,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 # Set working directory in container
 WORKDIR /app
 
-# Expose ports (e.g. 8080 for HTTP, 8081 for gRPC or admin endpoints)
-EXPOSE 8080
-EXPOSE 8081
+# Expose ports 
+EXPOSE 5000
 
 
 # ==============================
@@ -25,13 +24,13 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy project file and restore dependencies (enables build caching)
-COPY ["NutriFinderServer/NutriFinderServer.csproj", "NutriFinderServer/"]
-RUN dotnet restore "NutriFinderServer/NutriFinderServer.csproj"
+COPY ["NutriFinder.Server/NutriFinder.Server.csproj", "NutriFinder.Server/"]
+RUN dotnet restore "NutriFinder.Server/NutriFinder.Server.csproj"
 
 # Copy entire source tree and build project
 COPY . .
-WORKDIR "/src/NutriFinderServer"
-RUN dotnet build "./NutriFinderServer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/NutriFinder.Server"
+RUN dotnet build "./NutriFinder.Server.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 
 # =====================================
@@ -39,7 +38,7 @@ RUN dotnet build "./NutriFinderServer.csproj" -c $BUILD_CONFIGURATION -o /app/bu
 # =====================================
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./NutriFinderServer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./NutriFinder.Server.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 
 # ===============================
@@ -54,4 +53,4 @@ WORKDIR /app
 COPY --from=publish /app/publish .
 
 # Define entry point for container
-ENTRYPOINT ["dotnet", "NutriFinderServer.dll"]
+ENTRYPOINT ["dotnet", "NutriFinder.Server.dll"]
