--- a/Client-CD-pipeline.yml
+++ b/Client-CD-pipeline.yml
@@ -37,21 +37,27 @@ steps:
 
   # Step 2: Login agent and push both tags to Docker Hub
   - task: PowerShell@2
-    displayName: 'Docker login (PowerShell)'
+    displayName: 'Debug: show token length'
     inputs:
       targetType: 'inline'
       script: |
-        echo "Attempting Docker login for user: $env:DOCKER_USERNAME"
-        echo $env:DOCKER_PASSWORD | docker login -u $env:DOCKER_USERNAME --password-stdin
+        Write-Host "Username is: $env:DOCKER_USERNAME"
+        Write-Host "Password Length: $($env:DOCKER_PASSWORD.Length)"
     env:
       DOCKER_USERNAME: $(DOCKER_USERNAME)
       DOCKER_PASSWORD: $(DOCKER_PASSWORD)
 
-
+  - task: CmdLine@2
+    displayName: 'Docker login'
+    inputs:
+      script: docker login -u %DOCKER_USERNAME% -p %DOCKER_PASSWORD%
+    env:
+      DOCKER_USERNAME: $(DOCKER_USERNAME)
+      DOCKER_PASSWORD: $(DOCKER_PASSWORD)
   - task: CmdLine@2
     displayName: 'Push image to Docker Hub'
     inputs:
-      script: docker push --all-tags mtbonde/nutrifinder-client
+      script: docker push --all-tags mtbonde/nutrifinder-server
 
   # Step 3: Cleanup to remove unused images from the agent
   - task: CmdLine@2
