--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'NutriFinderClient/**'
-      - '.github/workflows/cd-client.yml'
 
 jobs:
   build-and-push-client:
@@ -25,7 +22,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push NutriFinderClient
+      - name: Build and push NutriFinder Client image
         uses: docker/build-push-action@v6
         with:
           context: NutriFinderClient
@@ -33,8 +30,8 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:latest
-            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:${{ github.run_number }}
-            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:${{ github.sha }}      
-      
+            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:main
+            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:${{ github.sha }}
+
       - name: Cleanup
         run: docker image prune -a -f
