--- a/.github/workflows/cd-client.yml
+++ b/.github/workflows/cd-client.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Build and push NutriFinder Client image
         uses: docker/build-push-action@v6
         with:
-          context: NutriFinderClient
+          context: .
           file: NutriFinderClient/Dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:latest
-            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:main
+            ${{ secrets.DOCKER_USERNAME }}/nutrifinder-server:${{ github.run_number }}
             ${{ secrets.DOCKER_USERNAME }}/nutrifinder-client:${{ github.sha }}
 
       - name: Cleanup
-        run: docker image prune -a -f
+        run: docker image prune -f
